<resources>
    <string name="title_activity_take_phote">TakePhoteActivity</string>
    <string name="title_activity_show_croppered">ShowCropperedActivity</string>
    <string name="app_nameb">华图在线-公务员考试</string>
    <string name="app_nameh">华图在线公务员</string>
    <string name="load_empty">没有内容,请重试</string>
    <string name="load_error">加载失败,请重试</string>
    <string name="img_content_desc">图片</string>
    <string name="guide_button_start">立即体验</string>
    <string name="main_tab_name_one">练习</string>
    <string name="main_tab_name_two">听课</string>
    <string name="main_tab_name_three">我的</string>
    <string name="home_evaluate_report_name">评估报告</string>
    <string name="home_special_excise_name">专项练习</string>
    <string name="home_special_daily_name">每日特训</string>
    <string name="home_real_excise_name">真题演练</string>
    <string name="home_predict_exam_name">模考估分</string>
    <string name="home_athletic_excise_name">竞技赛场</string>
    <string name="home_done_num">已做</string>
    <string name="home_exam_point">考点</string>
    <string name="home_accuracy">正确率</string>
    <string name="home_predict_score_name">预测分</string>
    <string name="home_item_accuracy">正确率%d%%</string>
    <string name="home_item_scale">%1$d/%2$d</string>
    <string name="home_predict_score">100</string>
    <string name="home_done_value">100</string>
    <string name="home_exam_point_value">%1$d/%2$d</string>
    <string name="home_accuracy_value">%3.0f%%</string>
    <string name="advertise_title">推荐</string>
    <string name="advertise_click">点击查看</string>
    <string name="loginByMobile">手机号快速登录</string>
    <string name="login">登录账号</string>
    <string name="login_sug">华图网校/砖题库账号登录</string>
    <string name="login_sug1">华图教育/华图网校/砖题库账号均可登录</string>
    <string name="chinaMobilePrefix">+86</string>
    <string name="inputYourMobileNum">请输入您的手机号</string>
    <string name="inputYourPassword">请输入您的密码</string>
    <string name="inputYourNewPhone">请输入新的手机号</string>
    <string name="nextStep">下一步</string>
    <string name="register">注册</string>
    <string name="register_info">*未注册的手机号将自动注册</string>
    <string name="loginByPassword">使用密码登录</string>
    <string name="inputConfirmCode">请输入验证码</string>
    <string name="getConfirmCode">获取验证码</string>
    <string name="getConfirmCode1">点击获取验证码</string>
    <string name="goIntoMainPage">进入华图在线</string>
    <string name="networkerror">网络异常,请重新尝试</string>
    <string name="mobileNumIllegal">非法的手机号</string>
    <string name="mobileNoUser">该手机号未注册</string>
    <string name="accountHint">邮箱/用户名/手机号</string>
    <string name="loginconfirm">登录</string>
    <string name="forgetPasswordwithwhy">忘记密码?</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="confirmPasswordAgain">再次输入密码</string>
    <string name="passwordHint">请输入6-20位数字或字母组合</string>
    <string name="passwordCannotShortBy6">密码不能少于6位字符</string>
    <string name="passwordDifferentTwoTimes">两次输入密码不同</string>
    <string name="complete">完成</string>
    <string name="resetPassword">重置密码</string>
    <string name="resetPasswordSuccess">密码重置成功</string>
    <string name="inputConfirmCodeTitle">输入验证码</string>
    <string name="confirmCodeError">验证码错误</string>
    <string name="userAccountOrPwdError">用户名或密码错误</string>
    <string name="userAccountNotExit">用户名不存在</string>
    <string name="loginFailure">登录失败</string>
    <string name="resetFailure">重置失败</string>
    <string name="inputNickHint">设置昵称</string>
    <string name="inputPwdHint">密码 (请输入6-20位数字或字母组合)</string>
    <string name="userAccountAlreadyExit">用户已存在</string>
    <string name="completeUserAccount">完善个人资料</string>
    <string name="loginTimeOut">登录过期,请重新登录</string>
    <string name="paramsIllegal">非法参数</string>
    <string name="data">数据</string>
    <string name="dataEvery">各项得分</string>
    <string name="numMock">78</string>
    <string name="dataMock">你的账号于7月1日15:20在其他客户端登陆，请重新登陆。</string>
    <string name="dataMock2">如非本人操作，则密码可能已泄露，请及时修改密码。</string>
    <string name="dataMockShort">天上一个月亮</string>
    <string name="data3Mock">不定项</string>
    <string name="dateMock">2017-6-29</string>
    <string name="socrePredict">你的预测分数</string>
    <string name="joinedTest">参加的测试</string>
    <string name="freshman">新手</string>
    <string name="master">大师</string>
    <string name="youDefeatLostsUsers">你超越了35%的华图在线用户!</string>
    <string name="evaluatorReport">评估报告</string>
    <string name="continueLabel">继续</string>
    <string name="noMoreData">没有更多数据</string>
    <string name="sessionOutOfDateInfo">回话过期,请重新登录</string>
    <string name="report">报告</string>
    <string name="registerInfo">收到验证码即可完成注册\n确定离开吗?</string>
    <string name="continueRegister">继续注册</string>
    <string name="back">返回</string>
    <string name="edit">编辑</string>
    <string name="message">消息</string>
    <string name="play_next_tip">跳转至下一节课</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dialog_loading">加载中&#8230;</string>
    <string name="netschool_dialog_cancel">取消</string>
    <string name="other">其他</string>
    <string name="netschool_AnswerCard">答题卡</string>
    <string name="downing_space">%1$dM/%2$dM</string>
    <string name="record_down_lesson_order">第%d讲</string>
    <string name="record_down_memory_size">已用空间%1$s,可用空间%2$s</string>
    <string name="downing_size">正在缓存&#160;(%d)</string>
    <string name="downing_finished">已缓存&#160;(%d)</string>
    <string name="down_finished_num">已缓存%d课时</string>
    <string name="down_finished_total">共%d课时</string>
    <string name="moveview">数据加载中&#8230;</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="allname">所有人</string>
    <string name="justlookmyname">只看的我的聊天</string>
    <string name="displaytime">00:00:00</string>
    <string name="sytsemmesg">系统消息</string>
    <string name="notalkingyourself">禁止你和自己聊天</string>
    <string name="notalkingwithothers">禁止你和其他人聊天</string>
    <string name="noonetalking">禁止所以人聊天</string>
    <string name="chat_system_msg">系统消息</string>
    <string name="chat_system_msg_vodbegin">直播没有开始</string>
    <string name="chat_system_msg_vodpause">直播暂停</string>
    <string name="chat_system_msg_voding">直播中</string>
    <string name="chat_system_msg_vodstop">直播停止</string>
    <string name="title_activity_chat_">Chat_Activity</string>
    <string name="chat_expression">表情</string>
    <string name="chat_sendmsg">发送</string>
    <string name="public_chat">公聊</string>
    <string name="netschool_counterdown" formatted="false">%s:%s</string>
    <string name="netschool_pause">暂停</string>
    <string name="netschool_dailytraining_hint">提示</string>
    <string name="netschool_warning_asking_giveup">是否放弃本次练习？</string>
    <string name="netschool_warning_giveup">放弃</string>
    <string name="netschool_warning_continue">继续答题</string>
    <string name="netschool_warning_creating">正在组卷&#8230;</string>
    <string name="netschool_dialog_flowcharge">&#160;&#160;&#160;&#160;您正在使用（2G/3G）网络下载离线试题包，继续下载将造成流量损失。建议在网络环境较好的Wi-Fi环境下进行下载操作。</string>
    <string name="netschool_buy_num">/%s&#160;人</string>
    <string name="netschool_course_center">课程中心</string>
    <string name="netschool_course_center_settings">设置</string>
    <string name="netschool_course_center_progress">加载中&#8230;</string>
    <string name="setting">设置</string>
    <string name="apprecommend">应用推荐</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于</string>
    <string name="accountInformation">账户信息</string>
    <string name="course_afterclass">课后作业</string>
    <string name="currentAccount">当前账号</string>
    <string name="targetTest">目标考试</string>
    <string name="feedBackMess">意见反馈欢迎您提出宝贵的意见和反馈，您留下的每个字都将用来改善我们的应用。</string>
    <string name="noinfomessage">暂无消息</string>
    <string name="network_err">网络异常</string>
    <string name="about_hotline">客 服 热 线:</string>
    <string name="about_telephone">4006&#8211;01&#8211;9999</string>
    <string name="feedbackEmail">联系方式：邮箱/手机号</string>
    <string name="share_info_report">#华图在线公务员行测#我正在使用华图在线公务员行测Android客户端。通过智能评估算法预测，我参加“行测”考试能得%s</string>
    <string name="share_info_result">#华图在线公务员行测#我正在使用华图在线公务员行测Android客户端。在竞技考场中,我凭借优秀的个人能力，击败对手获得%s</string>
    <string name="home_DailyTraining">每日特训\n</string>
    <string name="home_PredictedExercises">我猜你练\n</string>
    <string name="home_AthleticExercise">竞技练习\n</string>
    <string name="home_KnowledgeStrengthen">考点直击\n</string>
    <string name="home_expected">敬请期待\n</string>
    <string name="predicte_five_road_kill">赶紧来5道，我要立刻消灭他们</string>
    <string name="predicte_predictedExercise_Verify">真的吗？来五道验证一下</string>
    <string name="onclick_again">点击重试</string>
    <string name="new_rule">&#160;&#160;&#160;&#160;规则&#160;&#160;&#160;&#160;</string>
    <string name="new_nohave">&#160;未掌握</string>
    <string name="new_basichave">&#160;基本掌握</string>
    <string name="new_master">&#160;熟练掌握</string>
    <string name="athletic_refine">精炼</string>
    <string name="athletic_strengthen">强化</string>
    <string name="athletic_training">训练</string>
    <string name="errdata_2ten">来10道</string>
    <string name="page_up">上一页</string>
    <string name="page_down">下一页</string>
    <string name="my_ranking">我的排行</string>
    <string name="join">加入</string>
    <string name="full">满员</string>
    <string name="practice_test_chart">模考分数趋势图</string>
    <string name="input_phone_num">请输入手机号</string>
    <string name="phone_num">手机号：</string>
    <string name="get_verification_code">获取短信验证码</string>
    <string name="phone_register_info">您也可以通过</string>
    <string name="email_register">切换邮箱注册&gt;&gt;</string>
    <string name="gufen_report_wait_hint">该考试时间未结束，暂无成绩统计。</string>
    <string name="gufen_report_wait_hint2">考试结束后再来查看吧。</string>
    <string name="direct_time">直播时间：</string>
    <string name="user_suggest">请填写建议或内容</string>
    <string name="user_live">是否要退出?</string>
    <string name="user_delete_message">是否删除本条消息?</string>
    <string name="user_delete_sure">选择退出后，答题记录将无法保存，确定退出？</string>
    <string name="user_submit">试卷正在提交中，请稍后在答题记录中查看成绩！</string>
    <string name="user_unfinish_live">您的试卷还未答完是否要退出？</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="search">搜索</string>
    <string name="ok_info">好的, 知道了</string>
    <string name="date">日期</string>
    <string name="predictLine">预测分趋势</string>
    <string name="search_noresult">搜索无结果...</string>
    <string name="download_error">下载失败...</string>
    <string name="athletic_win_num">胜%d场</string>
    <string name="athletic_rule">出题规则:%1$d道题%2$d分钟</string>
    <string name="theme_mode_name_Day">日间模式</string>
    <string name="theme_mode_name_Night">夜间模式</string>
    <string name="toast_error_unknown">未知错误</string>
    <string name="lesson_tv_buy_now">正在热抢</string>
    <string name="lesson_tv_time_end">距停售&#160;</string>
    <string name="lesson_tv_time_start">距开抢&#160;</string>
    <string name="lesson_tv_free">免费</string>
    <string name="lesson_tv_content">公务员面试真功公务员面试真功公务员面试真功公务员面试真功</string>
    <string name="lesson_tv_title_short">短标题</string>
    <string name="lesson_tv_short_title">2017年省考集训营班</string>
    <string name="lesson_tv_buy_begin_time">%s 开抢</string>
    <string name="lesson_tv_buy_grab">人已抢</string>
</resources>