<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray001">

    <include
        android:id="@+id/rl_topbar"
        layout="@layout/topbar_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/titlebar_15dp" />

    <RelativeLayout
        android:id="@+id/rl_inputmobile"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/rl_topbar"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_chinaMobilePrefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/chinaMobilePrefix"
            android:textColor="@color/black001"
            android:textSize="16sp" />

        <View
            android:id="@+id/v_interval"
            android:layout_width="@dimen/width_1"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_chinaMobilePrefix"
            android:background="@color/gray002" />

        <com.huatu.handheld_huatu.view.ClearEditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/v_interval"
            android:background="@null"
            android:digits="0123456789"
            android:gravity="center_vertical"
            android:hint="@string/inputYourMobileNum"
            android:inputType="number"
            android:lines="1"
            android:maxLength="11"
            android:paddingLeft="8dp"
            android:textColor="@color/black001"
            android:textColorHint="@color/gray002"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:id="@+id/line120"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/rl_inputmobile"
        android:background="#d1d1d1" />

    <RelativeLayout
        android:id="@+id/rl_confirmcode"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/line120"
        android:background="@color/white"
        android:visibility="visible">

        <EditText
            android:id="@+id/et_confirmcode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/inputConfirmCode"
            android:lines="1"
            android:maxLength="11"
            android:textColor="@color/black001"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_timeclock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:text="@string/getConfirmCode"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lv_read_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_confirmcode"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radio_bg"
            android:checked="false"
            android:padding="5dp" />

        <TextView
            android:id="@+id/tv_read_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:text="注册/登录即表示阅读并同意《华图在线用户服务协议》和《隐私政策》"
            android:textColor="#999999"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_nextstep"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_below="@id/lv_read_rules"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/drawable_rectangle_bfbfbf"
        android:gravity="center"
        android:text="@string/nextStep"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_login_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_nextstep"
        android:padding="10dp"
        android:text="@string/register_info"
        android:textColor="@color/text_color_light"
        android:textSize="14sp" />
</RelativeLayout>

