<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray001">

    <include
        android:id="@+id/rl_topbar"
        layout="@layout/topbar_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.huatu.handheld_huatu.view.ClearEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_below="@id/rl_topbar"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:lines="1"
        android:textColorHint="@color/gray002"
        android:layout_marginTop="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="16dp"/>

    <View
        android:id="@+id/v_interval"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_1"
        android:layout_below="@id/et_password"
        android:background="@color/gray005"
        android:layout_marginLeft="15dp"/>

    <com.huatu.handheld_huatu.view.ClearEditText
        android:id="@+id/et_passwordconfirm"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_below="@id/v_interval"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:hint="@string/confirmPasswordAgain"
        android:inputType="textPassword"
        android:lines="1"
        android:textColorHint="@color/gray002"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/tv_loginconfirm"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_below="@id/et_passwordconfirm"
        android:background="@drawable/drawable_rectangle_bfbfbf"
        android:gravity="center"
        android:text="@string/complete"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"/>
</RelativeLayout>