<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/whole_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray001">

    <RelativeLayout
        android:id="@+id/rl_top_titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_title_titlebar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="登录"
            android:textColor="@color/black001"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            android:padding="7dp"
            android:src="@drawable/hms_guanbi"
            android:visibility="gone" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_top_titlebar"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/login_sug1"
        android:textColor="@color/gray006"
        android:textSize="15sp" />

    <com.huatu.handheld_huatu.view.ClearEditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_top"
        android:background="@color/white"
        android:drawableLeft="@drawable/login_user"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/accountHint"
        android:lines="1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColorHint="@color/gray002"
        android:textSize="16sp" />

    <View
        android:id="@+id/v_interval"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_1"
        android:layout_below="@id/et_account"
        android:layout_marginLeft="15dp"
        android:background="@color/gray005" />

    <com.huatu.handheld_huatu.view.ClearEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/v_interval"
        android:background="@color/white"
        android:drawableLeft="@drawable/login_password"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/inputYourPassword"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColorHint="@color/gray002"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_read_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:lineSpacingExtra="4dp"
        android:padding="10dp"
        android:text="注册/登录即表示阅读并同意《华图在线用户服务协议》和《隐私政策》"
        android:textColor="#999999"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_loginconfirm"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_below="@id/tv_read_rules"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/drawable_rectangle_bfbfbf"
        android:gravity="center"
        android:text="@string/loginconfirm"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_quick_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_loginconfirm"
        android:layout_alignParentLeft="true"
        android:padding="15dp"
        android:text="注册/手机验证码登录"
        android:textColor="@color/gray010"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_loginconfirm"
        android:layout_alignParentRight="true"
        android:padding="15dp"
        android:text="@string/forgetPasswordwithwhy"
        android:textColor="@color/gray010"
        android:textSize="12sp" />
</RelativeLayout>