<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray001">

    <include
        android:id="@+id/rl_topbar"
        layout="@layout/topbar_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/rl_inputmobile"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/rl_topbar"
        android:background="@color/white"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/tv_chinaMobilePrefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/chinaMobilePrefix"
            android:textColor="@color/black001"
            android:gravity="center"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="15dp"
            android:textSize="16dp"/>

        <View
            android:id="@+id/v_interval"
            android:layout_width="@dimen/width_1"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_chinaMobilePrefix"
            android:background="@color/gray002"/>

        <com.huatu.handheld_huatu.view.ClearEditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/v_interval"
            android:background="@null"
            android:hint="@string/inputYourMobileNum"
            android:inputType="number"
            android:lines="1"
            android:textColor="@color/black001"
            android:textColorHint="@color/gray002"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="16dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_nextstep"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_below="@id/rl_inputmobile"
        android:background="@drawable/drawable_rectangle_bfbfbf"
        android:gravity="center"
        android:text="@string/nextStep"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"/>
</RelativeLayout>